# Automata

./: CMakeLists.txt  README.md  System.Automata.sln
AutomataTests/: AutomataTests.csproj  FATests.cs  NFATests.cs  PDATests.cs  PdaTests.cs  TmTests.cs
System.Automata/: AcceptingStates.cs  Alphabet.cs  Automaton.cs  FiniteAutomaton.cs  MultitapeTuringMachine.cs  MultitapeTuringTransition.cs  MultitapeTuringTransitionFunction.cs  NondeterministicFiniteAutomaton.cs  NondeterministicTransitionFunction.cs  PushdownAutomaton.cs  PushdownTransition.cs  PushdownTransitionFunction.cs  StackAlphabet.cs  State.cs  States.cs  System.Automata.csproj  TapeAlphabet.cs  Transition.cs  TransitionFunction.cs  TuringMachine.cs  TuringTransition.cs  TuringTransitionFunction.cs
docs/: annotated.html  class_system_1_1_automata_1_1_accepting_states.html  class_system_1_1_automata_1_1_automaton-members.html  class_system_1_1_automata_1_1_automaton.html  class_system_1_1_automata_1_1_finite_automaton-members.html  class_system_1_1_automata_1_1_multitape_turing_machine-members.html  class_system_1_1_automata_1_1_multitape_turing_machine.html  class_system_1_1_automata_1_1_multitape_turing_transition_function-members.html  class_system_1_1_automata_1_1_pushdown_automaton.html  class_system_1_1_automata_1_1_pushdown_transition-members.html  class_system_1_1_automata_1_1_pushdown_transition.html  class_system_1_1_automata_1_1_pushdown_transition_function-members.html  class_system_1_1_automata_1_1_pushdown_transition_function.html  class_system_1_1_automata_1_1_stack_alphabet-members.html  (+13 more)
(+146 files in other folders)
